<?xml version="1.0" encoding="UTF-8" ?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/img_logo"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/logo_image_text"/>

    <com.example.androidexample.AppEditText
        android:id="@+id/inputEmail"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/email"
        android:paddingStart="16dp"
        tools:ignore="RtlSymmetry,TextFields"
        android:focusableInTouchMode="true"/>

    <com.example.androidexample.AppEditText
        android:id="@+id/inputPassword"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        tools:ignore="TextFields"
        android:focusableInTouchMode="true"/>

    <com.example.androidexample.AppButton
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:text="@string/sign_in"
        android:background="@drawable/bg_secondary_button"/>

    <com.example.androidexample.AppButton
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:text="@string/sign_up"
        app:variation="secondary"/>

</LinearLayout>