<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center|bottom"
    android:paddingTop="20dp">
    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/img_bg_welcome"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginBottom="20dp"
            android:text="@string/welcome_to_the_app_here_you_can_not_do_anything"/>
     <com.example.androidexample.AppButton
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_marginHorizontal="16dp"
         android:layout_marginBottom="16dp"
         android:text="@string/get_started_button"/>
</LinearLayout>